update the Zylom config for the new batch

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zylomgamesplayer.zylomgamesplayer.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zylomgamesplayer.zylomgamesplayer.dll.config
@@ -38,6 +38,78 @@
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9BA66DEC-9B58-44DB-B22F-1A73826D73B1}\PROXYSTUBCLSID32" valueName="" value="{00020424-0000-0000-C000-000000000046}" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9BA66DEC-9B58-44DB-B22F-1A73826D73B1}\TYPELIB" valueName="" value="{3A28328F-AE4E-4D8B-8504-8AB41C0F490C}" valueKind="String" />
             <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9BA66DEC-9B58-44DB-B22F-1A73826D73B1}\TYPELIB" valueName="VERSION" value="1.0" valueKind="String" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory.1" value="Macromedia Flash Factory Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory.1\CLSID" value="{D27CDB70-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.1" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.1\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory" value="Macromedia Flash Factory Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory\CLSID" value="{D27CDB70-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\FlashFactory.FlashFactory\CurVer" value="FlashFactory.FlashFactory.1" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.3" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.3\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.4" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.4\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.5" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.5\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.6" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.6\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.7" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.7\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.8" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.8\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.9" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.9\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.10" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.10\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.11" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.11\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.12" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.12\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.13" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.13\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.14" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.14\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.15" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.15\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.16" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.16\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.17" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.17\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.18" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.18\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.19" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.19\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.20" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.20\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.21" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.21\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.22" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.22\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.23" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.23\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.24" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.24\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.25" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.25\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.26" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.26\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.27" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.27\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.28" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.28\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.29" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.29\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.30" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.30\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.31" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.31\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.32" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash.32\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash" value="Shockwave Flash Object" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash\CLSID" value="{D27CDB6E-AE6D-11cf-96B8-444553540000}" valueKind="String" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Classes\ShockwaveFlash.ShockwaveFlash\CurVer" value="ShockwaveFlash.ShockwaveFlash.32" valueKind="String" valueName="" />
+            <registryState type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Macromedia\FlashPlayer" valueName="" />
+            <registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\Macromedia\FlashPlayer" value="32,0,0,465" valueKind="String" valueName="CurrentVersion" />
           </registryStates>
         </modifications>
       </template>
