--- a/FlashpointSecurePlayer/App.config
+++ b/FlashpointSecurePlayer/App.config
@@ -3,7 +3,13 @@
   <configSections>
     <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </configSections>
-
+  
+  <flashpointSecurePlayer>
+    <!--
+	  <flashpointProxy proxy="true" port="22500" />
+	-->
+  </flashpointSecurePlayer>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
